# Secured-USB-app

./: README.md
QRGuard/GUI/: gui.py
QRGuard/Rust/: Cargo.toml  main.rs
