[package]
name = "QRGuard"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm     = "0.10"
drbg        = "1.0"
clap        = { version = "4.2", features = ["derive"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
bincode     = "1.3"
chrono      = { version = "0.4", features = ["serde"] }
hex         = "0.4"
base64      = "0.13"
qrcode      = { version = "0.14.1", features = ["image"] }
image       = "0.25"
